# shipping

modules/connectors/royalmail_clickdrop/royalmail_clickdrop/: IMPLEMENTATION_NOTES.md  MANIFEST.in  README.md  pyproject.toml
modules/connectors/royalmail_clickdrop/royalmail_clickdrop/karrio/mappers/royalmail_clickdrop/: __init__.py  mapper.py  settings.py
modules/connectors/royalmail_clickdrop/royalmail_clickdrop/karrio/providers/royalmail_clickdrop/: manifest.py  units.py  utils.py
modules/connectors/royalmail_clickdrop/royalmail_clickdrop/karrio/schemas/royalmail_clickdrop/: error_response.py  label_error_response.py  manifest_async_response.py  manifest_details_response.py  order_info_response.py  order_status_request.py  return_services_response.py  shipment_response.py
modules/connectors/royalmail_clickdrop/royalmail_clickdrop/schemas/: cancel_response.json  error_response.json  manifest_async_response.json  manifest_details_response.json  manifest_request.json  manifest_response.json  order_details_response.json  order_status_request.json  order_status_response.json  orders_details_response.json  orders_response.json  return_services_response.json  shipment_response.json
modules/connectors/royalmail_clickdrop/royalmail_clickdrop/tests/royalmail_clickdrop/: __init__.py  test_cancel.py  test_get_manifest.py  test_get_order_details.py  test_get_return_services.py  test_get_version.py  test_label.py  test_list_order_details.py  test_rate.py  test_retry_manifest.py  test_return_shipment.py  test_settings.py  test_shipment.py
(+99 files in other folders)
