[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karrio_royalmail_clickdrop"
version = "2026.4"
description = "Karrio - Royal Mail Click and Drop Shipping Extension"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0"
authors = [
    {name = "karrio", email = "hello@karrio.io"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "karrio",
    "pycountry",
]

[project.urls]
Homepage = "https://github.com/karrioapi/karrio"

[project.entry-points."karrio.plugins"]
royalmail_clickdrop = "karrio.plugins.royalmail_clickdrop:METADATA"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
exclude = ["tests.*", "tests"]
namespaces = true